<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_baseline_people_24"
        android:title="@string/profile"
        />

    <item
        android:id="@+id/menuNotifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/notifications"
        />

    <item
        android:id="@+id/menuCollection"
        android:icon="@drawable/ic_baseline_collections_24"
        android:title="@string/collection"
        />

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/menuSettings"
                android:icon="@drawable/ic_baseline_settings_24"
                android:title="@string/settings"/>

            <item
                android:id="@+id/menuSupport"
                android:icon="@drawable/ic_baseline_contact_support_24"
                android:title="@string/support"/>

            <item
                android:id="@+id/menuAbout"
                android:icon="@drawable/ic_baseline_info_24"
                android:title="@string/about"/>

        </menu>
    </item>
</menu>